# daft-lance

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pr-test-suite.yml  publish-package.yml
daft_lance/: __init__.py  _blob.py  _lance.py  _metadata.py  lance_compaction.py  lance_data_sink.py  lance_merge_column.py  lance_scalar_index.py  lance_scan.py  merge.py  namespace.py  scalar_index.py  utils.py
docs/: findings.md
docs/lance_data_sink/: 03_requirements.md  04_review.md  post_refactor.json  post_refactor_10m.json  pr_performance.md  pre_refactor_10m.json  v032_10m.json  v032_comparison.md
tests/benchmarks/: conftest.py  test_lance_data_sink_bench.py
tests/io/lance/: test_blob_v2_policy.py  test_expression_point_lookup.py  test_fast_path_merge.py  test_lance_batching.py  test_lance_blob_v2_e2e.py  test_lance_blob_v2_write.py  test_lance_compaction.py  test_lance_count_pushdown_coverage.py  test_lance_factory_function.py  test_lance_point_lookup.py  test_lance_reads.py  test_lance_rest_comprehensive.py  test_lance_scalar_index.py  test_lance_writes.py  test_mem_wal_writes.py
tests/io/lancedb/: conftest.py  test_fast_path_merge.py  test_lance_batching.py  test_lance_blob_v2_read.py  test_lance_blob_v2_write.py  test_lance_checkpoint.py  test_lance_data_sink_internals.py  test_lance_data_sink_storage_versions.py  test_lance_merge_evolution.py  test_lance_mutations.py  test_lancedb_blob_v2.py  test_lancedb_cleanup.py  test_lancedb_compaction.py  test_lancedb_count_pushdown_coverage.py  test_lancedb_custom_task.py  test_lancedb_factory_function.py  test_lancedb_full_text_search.py  test_lancedb_point_lookup.py  test_lancedb_reads.py  (+8 more)
