[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "daft-lance"
version = "0.1.0"
description = "Lance integration for Daft - compaction, indexing, merge columns, and REST operations"
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = [
    "daft>=0.7.5",
    "pylance<0.40.0",
]

[project.optional-dependencies]
rest = ["lance-namespace", "lance-namespace-urllib3-client"]
dev = [
    "pytest",
    "packaging",
]

[tool.setuptools.packages.find]
include = ["daft_lance*"]
