[project]
name = "daft-lance"
version = "0.1.1"
description = "Lance integration for Daft - compaction, indexing, merge columns, and REST operations"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "daft>=0.7.5",
    "pylance<0.40.0",
]

[project.optional-dependencies]
rest = ["lance-namespace", "lance-namespace-urllib3-client"]

[dependency-groups]
dev = [
    "pytest",
    "packaging",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
